# simul_furuta

./: .gitignore  CMakeLists.txt  FindAllegro.cmake  README.md
Disegni_furuta/: Draw1.AI  Draw2_withaxis.pdf_tex  pendolo.SLDPRT
Matlab/codegen/: A_red.m  codegen_init.m  datasheet.m  fast.slx  slow.slx
Matlab/drawings/: drawings.m
Matlab/dynamics/: B_red.m  dynamics.m  f_red.m
Matlab/simulation/: simulation.slx  simulation_init.m
Relazione_tex/: .gitignore  Draw2_withaxis.pdf_tex  formule.tex  interfaccia.tex  main.tex  resource.tex  schema_2.pdf_tex  task.tex  title.tex
include/: condiviso.h  controller.h  disturbance_and_noise.h  gui.h  keys.h  physics.h  ptask.h  rt_i32zcfcn.h  rt_urand_Upu32_Yd_f_pw.h  rtwtypes.h  simulation.h  zero_crossing_types.h
src/: controller.c  disturbance_and_noise.c  gui.c  keys.c  main.c  physics.c  ptask.c  rt_i32zcfcn.c  rt_urand_Upu32_Yd_f_pw.c  simulation.c
